--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 ﻿{
   "Name": "PlayerNameTags",
   "Author": "mrcyclo",
-  "Version": "1.0.0",
+  "Version": "1.0.1",
   "Description": "Display player name tags",
   "UniqueID": "mrcyclo.PlayerNameTags",
   "EntryDll": "PlayerNameTags.dll",
   "MinimumApiVersion": "3.18.1",
-  "UpdateKeys": []
+  "UpdateKeys": ["GitHub:mrcyclo/SMAPI-PlayerNameTags"]
 }
